
classDiagram
    class Main {
        +main() void
    }
    class SQLInjection {
        +test_injection(url: str) str
    }
    class XSSAttack {
        +test_xss(url: str) str
    }
    class SSRFExploit {
        +test_ssrf(url: str) str
    }
    Main --> SQLInjection
    Main --> XSSAttack
    Main --> SSRFExploit
